[package]
name = "engine"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.5.0", default-features = false,    features = [
     "bevy_render2",
     "bevy_winit",
     "bevy_core_pipeline"
]}
# should be better way to add crevice
crevice = { path = "../../bevy/crates/crevice", version = "0.8.0", features = ["glam"] }
bevy-inspector-egui = "0.6.1"
bevy_egui = "0.7.1"
wasm-bindgen = "0.2.78"
ron = "0.7"
hexasphere = "6.0.0"
rand = "0.8"
serde = { version = "1.0.130", features = ["serde_derive"] }

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}


